# prcpp_workspace

./: CMakeLists.txt  README.md
build_system/: CMakeLists.txt
example2/: CMakeLists.txt
example2/src/: main.cpp
uebungen/chat/client/: CMakeLists.txt
uebungen/chat/client/src/: main.cpp  manager.cpp  manager.h
uebungen/chat/core/: CMakeLists.txt
uebungen/chat/core/src/: chat_client.h  chat_server.cpp  chat_server.h  client_endpoint.cpp  client_endpoint.h  connection.cpp  connection.h  conversation.cpp  conversation.h  logger.cpp  logger.h  main.cpp  message.cpp  message.h  serializer.h  server_base.cpp  server_base.h  user.cpp  user.h
uebungen/chat/core/unittest/: serializer_test.cpp
uebungen/matrix/src/: main.cpp  matrix.cpp  matrix.h
uebungen/set/unittest/: set_test.cpp
woche2/: CMakeLists.txt
woche2/src/: main.cpp
